Musikfunktion vervollständigt und Answer-Klasse neu geschrieben